terraform/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  region = "ap-northeast-2"
}

variable "vpc_id" {
  type = string
}

resource "aws_security_group" "example_sg" {
  name = "example-security-group"
  description = "Example security group generated by Terraform"
  vpc_id = var.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "example-sg"
  }
}

resource "aws_instance" "app_server" {
  ami           = "ami-0c2acfcb2ac4d02a0"
  instance_type = "t2.micro"
  key_name = "key"

  vpc_security_group_ids = [aws_security_group.example_sg.id]

  tags = {
    Name = "ExampleAppServerInstance"
  }
}
